# rofi-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  treefmt.nix
.github/workflows/: ci.yml  release.yml
src/: cache.rs  clipboard.rs  cliphist.rs  config.rs  lib.rs  rofi.rs
src/rofi/: cliphist_mode.rs
